// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api Component should render correctly 1`] = `
Array [
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Public Api
  </button>,
  <div
    className="ui success message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Public Api Result
      </div>
      <p>
        result
      </p>
    </div>
  </div>,
]
`;

exports[`Api Component should render correctly with error 1`] = `
Array [
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Public Api
  </button>,
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error Accessing Public Api
      </div>
      <p>
        error
      </p>
    </div>
  </div>,
]
`;
